@@ -18,6 +18,7 @@ import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.ConnectException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.security.cert.X509Certificate;
 import java.util.concurrent.TimeUnit;
 
@@ -130,7 +131,7 @@ public class LoginClient {
         final Pair<String, String>[] urls = new Pair[] {
                 new Pair(CONST_SUB_COMMAND, CONST_CMD_GET_ACCOUNT_NAME), //URLEncoder.encode(accessCode,"UTF-8").replaceAll("%40","@")),
                 new Pair(CONST_ACCESS_CODE_PARAMETER, AccessCode.trim()), //URLEncoder.encode(accessCode,"UTF-8").replaceAll("%40","@")),
-                new Pair(CONST_APP_VER_PARAMETER, URLEncoder.encode(AndruavEngine.getPreference().getVersionName(),"UTF-8")),
+                new Pair(CONST_APP_VER_PARAMETER, URLEncoder.encode(AndruavEngine.getPreference().getVersionName(), StandardCharsets.UTF_8)),
                 new Pair(CONST_APP_NAME_PARAMETER, "andruav"),
                 new Pair(CONST_EXTRA_PARAMETER, "Andruav Mobile"),
         };
@@ -139,7 +140,6 @@ public class LoginClient {
 
         SendRequest(CMD_RetrieveAccountName, CONST_AGENT_FUNCTION + CONST_AGENT_ACCOUNT_MANAGMENT , urls, null);
 
-        return;
     }
 
 
@@ -154,7 +154,7 @@ public class LoginClient {
                 new Pair(CONST_ACCOUNT_NAME_PARAMETER, AccountName.trim()), //URLEncoder.encode(accessCode,"UTF-8").replaceAll("%40","@")),
                 new Pair(CONST_ACCESS_CODE_PARAMETER, AccessCode.trim()), // read from preference not from AndruavSettings.andruavwe7da.
                 new Pair(CONST_GROUP_PARAMETER, Group.trim()), //URLEncoder.encode(accessCode,"UTF-8").replaceAll("%40","@")),
-                new Pair(CONST_APP_VER_PARAMETER, URLEncoder.encode(AndruavEngine.getPreference().getVersionName(),"UTF-8")),
+                new Pair(CONST_APP_VER_PARAMETER, URLEncoder.encode(AndruavEngine.getPreference().getVersionName(), StandardCharsets.UTF_8)),
                 new Pair(CONST_APP_NAME_PARAMETER, "andruav"),
                 new Pair(CONST_EXTRA_PARAMETER, "Andruav Mobile"),
         };
@@ -190,7 +190,7 @@ public class LoginClient {
         final Pair<String, String>[] urls = new Pair[] {
                 new Pair(CONST_SUB_COMMAND, CONST_CMD_CREATE_ACCESSCODE), //URLEncoder.encode(accessCode,"UTF-8").replaceAll("%40","@")),
                 new Pair(CONST_ACCOUNT_NAME_PARAMETER, AccountName.trim()), //URLEncoder.encode(accessCode,"UTF-8").replaceAll("%40","@")),
-                new Pair(CONST_APP_VER_PARAMETER, URLEncoder.encode(AndruavEngine.getPreference().getVersionName(),"UTF-8")),
+                new Pair(CONST_APP_VER_PARAMETER, URLEncoder.encode(AndruavEngine.getPreference().getVersionName(), StandardCharsets.UTF_8)),
                 new Pair(CONST_APP_NAME_PARAMETER, "andruav"),
                 new Pair(CONST_EXTRA_PARAMETER, "Andruav Mobile"),
         };
@@ -209,7 +209,7 @@ public class LoginClient {
         final Pair<String, String>[] urls = new Pair[] {
                 new Pair(CONST_SUB_COMMAND, CONST_CMD_REGENERATE_ACCESSCODE), //URLEncoder.encode(accessCode,"UTF-8").replaceAll("%40","@")),
                 new Pair(CONST_ACCOUNT_NAME_PARAMETER, AccountName.trim()), //URLEncoder.encode(accessCode,"UTF-8").replaceAll("%40","@")),
-                new Pair(CONST_APP_VER_PARAMETER, URLEncoder.encode(AndruavEngine.getPreference().getVersionName(),"UTF-8")),
+                new Pair(CONST_APP_VER_PARAMETER, URLEncoder.encode(AndruavEngine.getPreference().getVersionName(), StandardCharsets.UTF_8)),
                 new Pair(CONST_APP_NAME_PARAMETER, "andruav"),
                 new Pair(CONST_EXTRA_PARAMETER, "Andruav Mobile"),
         };
@@ -224,7 +224,7 @@ public class LoginClient {
 
             AndruavEngine.log().log(Preference.getLoginUserName(null), "netType", NetInfoAdapter.getInfoJSON());
 
-            String url = "cmd=l&pid=" + URLEncoder.encode(PID, "UTF-8") + "&acc=" + URLEncoder.encode(AccountName, "UTF-8");
+            String url = "cmd=l&pid=" + URLEncoder.encode(PID, StandardCharsets.UTF_8) + "&acc=" + URLEncoder.encode(AccountName, StandardCharsets.UTF_8);
 
             //SendRequest(CMD_LinkPID2Account, AccountName, null, url,null);
         }
@@ -263,13 +263,11 @@ public class LoginClient {
                               @Override
                               public void checkServerTrusted(final X509Certificate[] chain,
                                                              final String authType) {
-                                  return ;
                               }
 
                               @Override
                               public void checkClientTrusted(final X509Certificate[] chain,
                                                              final String authType) {
-                                  return ;
                               }
                           }};
 
@@ -392,7 +390,6 @@ public class LoginClient {
 
         }.execute();
 
-        return ;
     }
 
     private static void ParseReply (String body)
@@ -468,14 +465,12 @@ public class LoginClient {
             }
             Log.d("ws",body);
 
-            return ;
         } catch (Exception e) {
             AndruavEngine.log().logException(AndruavSettings.AccessCode, "AUTH_FAILED", e);
             LastError = 999;
             LastMessage = "Site is down ... please try later";
             Log.d("ws","Site is down ... please try later");
 
-            return ;
         }
 
 
